[gd_scene load_steps=6 format=3 uid="uid://dm5wcc88l2b"]

[ext_resource type="Script" path="res://src/dice_chucker/DiceChucker.gd" id="1_bfij5"]
[ext_resource type="Texture2D" uid="uid://bbpjwodoxtqiy" path="res://src/dice_chucker/dice_faces.JPG" id="2_4dxdb"]
[ext_resource type="Texture2D" uid="uid://dnq7h87ke4c3e" path="res://src/dice_chucker/dice_roll.png" id="3_eicry"]

[sub_resource type="Animation" id="Animation_nqmap"]
resource_name = "chuck"
length = 1.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("DiceSprite:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("DiceRollSprite:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("DiceRollSprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_002gp"]
_data = {
"chuck": SubResource("Animation_nqmap")
}

[node name="DiceChucker" type="Node2D"]
script = ExtResource("1_bfij5")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_002gp")
}

[node name="DiceSprite" type="Sprite2D" parent="."]
scale = Vector2(0.2, 0.22)
texture = ExtResource("2_4dxdb")
centered = false
hframes = 5
vframes = 5
frame = 1

[node name="DiceRollSprite" type="Sprite2D" parent="."]
scale = Vector2(0.2, 0.2)
texture = ExtResource("3_eicry")
centered = false
hframes = 5
vframes = 4
frame = 11
